HelloUltraviolet/Fixtures/RejectedSource/Statements/BlocksDiagnostic/Source/Main.uv
//! Rejected statement specimen for block diagnostic coverage.

public procedure blocksDiagnosticReference() -> i32 {
    else
    return 1
}
